--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.2",
     "react-redux": "^9",
     "react-router": "^6.24.1",
     "react-router-dom": "^6.24.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^1.4.0"
   },
   "jest": {
     "verbose": true
