--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "react": "^18.3.1",
@@ -28,6 +29,7 @@
     "react-router": "^6.24.1",
     "react-router-dom": "^6.24.1",
     "redux-persist": "^6.0.0",
+    "uuid": "^10.0.0",
     "yup": "^1.4.0"
   },
   "jest": {
